--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ tensorboard = "^2.9.0"
 protobuf = "~=3.19.0"
 
 [tool.poetry.dev-dependencies]
+autopep8 = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
